[package]
name = "solana-block-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
axum = "0.8.4"
scc = "2.3.4"
solana-client = "2.2.7"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
mockall = "0.13.1"
